Fix incorrect copy constructors in hotspot

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • None
    • b19
    • Fix failed

      In JDK-8211073, an attempt was made to add -Wextra to hotspot. That patch was not accepted at the time being, but it did dig out some bugs in the code.

      While we await JDK-8211073 to be included in the code base (so -Wextra is always on), we can at least fix the bugs it found in some copy constructors.

        There are no Sub-Tasks for this issue.

            Assignee:
            Magnus Ihse Bursie
            Reporter:
            Magnus Ihse Bursie
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: