8213414: Fix incorrect copy constructors in hotspot

Reviewed-by: kbarrett